cargo-features = ["edition2021"]
[package]
name = "ricks"
version = "1.0.0"
edition = "2018"

[dependencies]
borsh = "0.9.1"
num-derive = "0.3"
solana-program = "1.9.2 "
num-traits = "0.2"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
thiserror = "1.0"
spl-associated-token-account = "1.0.1"

[dev-dependencies]
solana-program-test = "1.7.1"
solana-client = "1.7.1"
solana-sdk = "1.7.1"

[lib]
crate-type = ["cdylib", "lib"]